Prevent the white space wrapping in the .circle-container__inner

--- a/src/sections/Circles/_Circles.scss
+++ b/src/sections/Circles/_Circles.scss
@@ -17,6 +17,11 @@
         justify-content: center;
         align-items: center;
 
+        .num,
+        .description {
+          white-space: nowrap;
+        }
+
         .num {
           font-size: 72px;
           font-weight: 700;
